-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
4.8.0
-
None
-
[ts@magnesium playdate]$ cat /etc/redhat-release
Scientific Linux release 6.2 (Carbon)
[ts@magnesium playdate]$ uname -a
Linux magnesium 2.6.32-220.4.1.el6.x86_64 #1 SMP Mon Jan 23 17:20:44 CST 2012 x86_64 x86_64 x86_64 GNU/Linux
-
I68d91c02f5d82b7fc4cae0d2dedafb862a3b323b
With Qt-4.8.0 I'm not getting month names translated. The following two runs show the output from the program listed further below compiled against qt-4.7.3 and qt-4.8.0. The correct result is "marts" as coming from the qt-4.7.3 version. It doesn't work correctly with other languages, such as se_SV and de_DE.
[ts@magnesium playdate]$ LANG=da_DK.utf8 rhel6-qt47/playdate
Month 3: "marts"
[ts@magnesium playdate]$ LANG=da_DK.utf8 rhel6-qt48/playdate
Month 3: "March"
#include <QCoreApplication>
#include <QLocale>
#include <QtDebug>
int main(int argc, char *argv[]) {
QCoreApplication app(argc, argv);
qDebug() << "Month 3: " << QLocale().monthName(3);
return 0;
}
| For Gerrit Dashboard: QTBUG-24912 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 20869,2 | Use value of LANG if LC_TIME is empty. | 4.8 | qt/qt | Status: MERGED | +2 | 0 |