Use value of LANG if LC_TIME is empty.

Task-number: QTBUG-24912
Change-Id: I68d91c02f5d82b7fc4cae0d2dedafb862a3b323b
Reviewed-by: Denis Dzyubenko <denis.dzyubenko@nokia.com>
Reviewed-by: John Layt <jlayt@kde.org>